gcc/testsuite/g++.old-deja/g++.mike/s24939.C
// { dg-do assemble  }

class A;

class B {
public:
  B(); 
private:
  A a;  // { dg-error "" } 
};

class A { };
B::B() { }
